[package]
name = "hexdmc"
version = "1.1.0"
edition = "2021"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
itertools = "0.10"
owo-colors = "3.2"
phf = { version = "0.10", features = ["macros"] }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
insulting = []

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
