[package]
name = "hexdmc"
version = "1.2.3"
edition = "2021"
authors = ["alpha-tango-kilo <git@heyatk.com>"]
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://codeberg.org/alpha-tango-kilo/hexdmc"

[dependencies]
anyhow = "1"
itertools = "0.12"
owo-colors = "4"
phf = { version = "0.11", features = ["macros"] }

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
insulting = []

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
strip = true
